--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -25,30 +25,26 @@ The following examples require a user to be signed in to view the content. If th
 <CodeBlockTabs type="router" options={["app/dashboard/layout.tsx", "app/subscribe/page.tsx"]}>
 
 ```tsx filename="app/dashboard/layout.tsx"
-import { auth } from '@clerk/nextjs/server'
+import { auth } from '@clerk/nextjs/server';
 
-export default async function Layout(
-  { children }:
-    { children: React.ReactNode }
-) {
+export default async function Layout({ children }) {
   // If the user is not logged in they will be redirected to the sign-in route
   // If the user is logged in they can view the content
-  auth().protect()
+  auth().protect();
 
-  return <>{children}</>
+  return <>{children}</>;
 }
 ```
 
 
 ```tsx filename="app/subscribe/page.tsx"
-import { auth } from '@clerk/nextjs/server'
+import { auth } from '@clerk/nextjs/server';
 
 export default function Page() {
-
   if (!auth().userId) {
     // If the user is not logged in they will be redirected to the sign-in route
     // If the user is logged in they can view the route
-    return auth().protect()
+    return auth().protect();
   }
 
   return (
@@ -68,13 +64,14 @@ If you want to do something other than redirecting the user to the sign-in route
 <CodeBlockTabs type="router" options={["app/dashboard/layout.tsx", "app/subscribe/page.tsx"]}>
 
 ```tsx filename="app/dashboard/layout.tsx"
-import { auth } from '@clerk/nextjs/server'
-import { SignInButton, SignOutButton } from '@clerk/nextjs'
+import { auth } from '@clerk/nextjs/server';
+import { SignInButton, SignOutButton } from '@clerk/nextjs';
 
-export default async function Layout(
-  { children }:
-    { children: React.ReactNode }
-) {
+export default async function Layout({
+  children,
+}: {
+  children: React.ReactNode;
+}) {
   const { userId } = auth();
 
   if (!userId) {
@@ -83,11 +80,9 @@ export default async function Layout(
         <header>
           <SignInButton />
         </header>
-        <main>
-          {children}
-        </main>
+        <main>{children}</main>
       </>
-    )
+    );
   }
 
   return (
@@ -96,20 +91,17 @@ export default async function Layout(
         <p>Your userId is {userId}</p>
         <SignOutButton />
       </header>
-      <main>
-        {children}
-      </main>
+      <main>{children}</main>
     </>
-  )
+  );
 }
 ```
 
 ```tsx filename="app/subscribe/page.tsx"
-import { SignInButton } from "@clerk/nextjs"
-import { auth } from "@clerk/nextjs/server"
+import { SignInButton } from '@clerk/nextjs';
+import { auth } from '@clerk/nextjs/server';
 
 export default function Page() {
-
   const { userId } = auth();
 
   if (!userId) {
@@ -118,12 +110,12 @@ export default function Page() {
         <p>You are not signed in. Please sign in to see this content</p>
         <SignInButton />
       </div>
-    )
+    );
   }
-
+  console.log('WTF?');
   return (
     <p>This is a protected page. You can see this because you are logged in.</p>
-  )
+  );
 }
 ```
 </CodeBlockTabs>
@@ -153,18 +145,21 @@ export async function GET() {
 ```
 
 ```tsx filename="app/api/dashboard/route.ts"
-import { auth } from "@clerk/nextjs/server";
+import { auth } from '@clerk/nextjs/server';
 
 export async function GET() {
   const { userId } = auth();
 
   if (!userId) {
-    return new Response('Error: No signed in user', { status: 401 })
+    return Response.json(
+      { error: 'Error: No signed in user' },
+      { status: 401 },
+    );
   }
 
   // Add your Route Handler logic here
 
-  return Response.json({ userId })
+  return Response.json({ userId: auth().userId });
 }
 ```
 </CodeBlockTabs>
@@ -178,8 +173,8 @@ You can protect a page using [`getServerSideProps()`](https://nextjs.org/docs/pa
 <Tabs type="router" items={["Server Side Rendered", "Client side"]}>
 <Tab>
 ```tsx filename="pages/subscribe.tsx"
-import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
-import { GetServerSideProps, InferGetServerSidePropsType } from "next";
+import { getAuth, buildClerkProps } from '@clerk/nextjs/server';
+import { GetServerSideProps, InferGetServerSidePropsType } from 'next';
 
 export const getServerSideProps: GetServerSideProps = async (ctx) => {
   const { userId } = getAuth(ctx.req);
@@ -194,15 +189,15 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
   }
 
   return { props: { ...buildClerkProps(ctx.req) } };
-}
+};
 
-export default function Page(props: InferGetServerSidePropsType<typeof getServerSideProps>) {
+export default function Page(
+  props: InferGetServerSidePropsType<typeof getServerSideProps>,
+) {
   return (
     <>
       <h1>Plan Subscription</h1>
       <p>Subscribe to one of our plans, and get access today!</p>
-      {*/ TODO: add a short example of how auth info is passed through props and user data can be accessed*/}
-      <p>{props.auth.userId}</p>
     </>
   );
 }
