--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -245,7 +245,7 @@ The `authMiddleware()` method accepts an optional object. The following options 
 
 | Name                               | Type                 | Description                                                                                                                                                                                                                                                                                                                                     |
 | ---------------------------------- | -------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `afterAuth?`                       | `function`           | Called after the authentication middleware is executed. This function has access to the [`Authentication`](/docs/references/nextjs/authentication-object) object and can be used to execute logic based on the auth state.                                                                                                                      |
+| `afterAuth?`                       | `function`           | Called after the authentication middleware is executed. This function has access to the [`Auth`](/docs/references/nextjs/auth-object) object and can be used to execute logic based on the auth state.                                                                                                                      |
 | `apiRoutes?`                       | `string[]`           | A list of routes that should return 401 if the user is not logged in. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`                                                                                                            |
 | `audience?`                        | `string \| string[]` | A string or list of audiences.                                                                                                                                                                                                                                                                                                                  |
 | `audience?`                        | `string \| string[]` | A string or list of [audiences](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1.3). If passed, it is checked against the `aud` claim in the token.                                                                                                                                                                                    |
