JS quickstart updates for Vite application

--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -36,9 +36,36 @@ Select your preferred method below to get started.
   {/* NPM module tab */}
   <Tab>
     <Steps>
-      ### Install `@clerk/clerk-js`
+      ### Set up a JavaScript application using Vite
 
-      You'll need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
+      To install the ClerkJS SDK, you will need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
+
+      For the sake of this guide, scaffold your new JavaScript application using [Vite](https://vitejs.dev/guide/#scaffolding-your-first-vite-project). From the prompts, choose the **Vanilla** framework, and then choose the **JavaScript** variant.
+
+      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+        ```bash filename="terminal"
+        npm create vite@latest clerk-javascript
+        cd clerk-javascript
+        npm install
+        npm run dev
+        ```
+
+        ```bash filename="terminal"
+        yarn create vite clerk-javascript
+        cd clerk-javascript
+        yarn install
+        yarn dev
+        ```
+
+        ```bash filename="terminal"
+        pnpm create vite clerk-javascript
+        cd clerk-javascript
+        pnpm install
+        pnpm dev
+        ```
+      </CodeBlockTabs>
+
+      ### Install `@clerk/clerk-js`
 
       At the root of your project, install the ClerkJS package using your package manager of choice:
 
@@ -56,55 +83,36 @@ Select your preferred method below to get started.
         ```
       </CodeBlockTabs>
 
-      ### Set environment keys
+      ### Set environment variables
 
-      It's recommended to use environment variables to store your Clerk **Publishable Key**. A common way to use environment variables in a JavaScript project is putting the values in a `.env` file, then loading the values using the [`dotenv`](https://www.npmjs.com/package/dotenv) package. An example of how to set it up in this way is shown below:
+      It's recommended to use environment variables to store your Clerk **Publishable Key**. A common way to use environment variables in a JavaScript project is by putting the values in a `.env` file and then loading them into your application using a package like [`dotenv`](https://www.npmjs.com/package/dotenv). However, wite Vite, environment variables are exposed through the [`import.meta.env` object](https://vitejs.dev/guide/env-and-mode.html#env-variables).
 
       1. Create a `.env` file at the root of your project, and add your Clerk **Publishable Key**. If you're signed into Clerk, the `.env` snippet below will contain your key. Otherwise, you can copy it from the Clerk Dashboard by navigating to the [**API Keys**](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
         <InjectKeys>
-
-          ```sh filename=".env"
-          CLERK_PUBLISHABLE_KEY={{pub_key}}
+          ```env filename=".env"
+          VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
           ```
+        </InjectKeys>
 
-          </InjectKeys>
+      2. In your `main.js` file, import the publishable key using Vite's `import.meta.env` object.
 
-      2. Install the `dotenv` package using your package manager of choice:
-
-      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-        ```env filename="terminal"
-        npm install dotenv
-        ```
-
-        ```env filename="terminal"
-        yarn add dotenv
-        ```
-
-        ```env filename="terminal"
-        pnpm add dotenv
-        ```
-      </CodeBlockTabs>
-
-      3. Use the `dotenv` package to load the environment variables from the `.env` file.
-
-      ```js filename="index.js"
-      require('dotenv').config();
-
-      console.log(process.env.CLERK_PUBLISHABLE_KEY);
+      ```js filename="main.js"
+      const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
       ```
 
       ### Initialize ClerkJS
 
-      In your JavaScript file, import the `Clerk` class and instantiate it with your **Publishable Key**. Then, call the `load()` method to initialize ClerkJS.
+      To initialize the ClerkJS SDK, import the `Clerk` class and instantiate it with your **Publishable Key**. Then, call the `load()` method to initialize ClerkJS.
 
-      ```js filename="index.js"
-      require('dotenv').config();
-      import Clerk from '@clerk/clerk-js';
+      ```js filename="main.js"
+      import Clerk from "@clerk/clerk-js";
 
-      const clerk = new Clerk(process.env.CLERK_PUBLISHABLE_KEY);
+      const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
+
+      const clerk = new Clerk(clerkPubKey);
       await clerk.load({
-        // Set load options here...
+        // Set load options here
       });
       ```
 
@@ -123,14 +131,17 @@ Select your preferred method below to get started.
 
       <Tabs items={["index.js", "index.html"]}>
         <Tab>
-          ```typescript filename="index.js"
-          require('dotenv').config();
-          import Clerk from '@clerk/clerk-js';
+          ```js filename="main.js"
+          import Clerk from "@clerk/clerk-js";
 
-          const clerk = new Clerk(process.env.CLERK_PUBLISHABLE_KEY);
-          await clerk.load({
-            // Set load options here...
-          });
+          const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
+
+          if (!clerkPubKey) {
+            throw new Error("Add your VITE_CLERK_PUBLISHABLE_KEY to .env file");
+          }
+
+          const clerk = new Clerk(clerkPubKey);
+          await clerk.load();
 
           if (clerk.user) {
             document.getElementById("app").innerHTML = `
@@ -147,7 +158,7 @@ Select your preferred method below to get started.
             `;
 
             const signInDiv =
-              document.getElementById("sign-in")!;
+              document.getElementById("sign-in");
 
             clerk.mountSignIn(signInDiv);
           }
@@ -156,11 +167,17 @@ Select your preferred method below to get started.
 
           <Tab>
           ```html filename="index.html"
-          <!DOCTYPE html>
+          <!doctype html>
           <html lang="en">
+            <head>
+              <meta charset="UTF-8" />
+              <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+              <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+              <title>Vite App</title>
+            </head>
             <body>
               <div id="app"></div>
-              <script src="index.js"></script>
+              <script type="module" src="/main.js"></script>
             </body>
           </html>
           ```
