--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -30,8 +30,7 @@ For details on how to use this module, see the [Go Documentation](https://pkg.go
 The Clerk Go SDK is organized using a resource-based structure similar to the [Clerk Backend API](https://clerk.com/docs/reference/backend-api).
 Each API supports specific operations, like Create or List. While operations for each resource vary, a similar pattern is applied throughout Clerk Go.
 
-To execute API operations, you must configure Clerk Go with your Clerk secret key.
-If you're signed into Clerk, the code examples below will contain your secret key. Otherwise:
+To execute API operations, you must configure Clerk Go with your Clerk secret key. To find your Clerk secret key:
   - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
   - Select your application, then select **🔑 API Keys** in the sidebar menu.
   - In the **Secret Keys** section, you can copy your secret key. It is the same key across all frameworks.
@@ -50,8 +49,6 @@ The following examples demonstrate both approaches.
 
 If you only use one API key, you can import the packages required for the APIs you need. Then you can execute your desired request methods as functions, such as `$resource$.Get()` or `$resource$.Delete()`. The following example demonstrates this process:
 
-<InjectKeys>
-
 ```go
 import (
   "github.com/clerk/clerk-sdk-go/v2"
@@ -62,7 +59,7 @@ import (
 ctx := context.Background()
 
 // Set the API key with your Clerk secret key
-clerk.SetKey("{{secret_key}}")
+clerk.SetKey("sk_live_xxx")
 
 // Create
 resource, err := $resource$.Create(ctx, &$resource$.CreateParams{})
@@ -83,15 +80,11 @@ for _, resource := range list.$Resource$s {
 }
 ```
 
-</InjectKeys>
-
 ### Usage with a client
 
 If you're working with multiple keys, it's recommended to use Clerk Go with a client. The API packages for each
 resource export a `Client`, which supports all the API's operations.
 This way, you can create as many clients as needed, each with their own API key, as shown in the following example:
-
-<InjectKeys>
 
 ```go
 import (
@@ -104,7 +97,7 @@ ctx := context.Background()
 
 // Initialize a client with an API key
 config := &clerk.ClientConfig{}
-config.Key = "{{secret_key}}"
+config.Key = "sk_live_xxx"
 client := $resource$.NewClient(config)
 
 // Create
@@ -125,7 +118,5 @@ for _, resource := range list.$Resource$s {
     // do something with the resource
 }
 ```
-
-</InjectKeys>
 
 For more usage details, check out the [examples](/docs/references/go/other-examples) or the library's [README file](https://github.com/clerk/clerk-sdk-go).
