--- a/docs/references/go/overview.mdx
+++ b/docs/references/go/overview.mdx
@@ -119,4 +119,4 @@ for _, resource := range list.$Resource$s {
 }
 ```
 
-For more usage details, check out the [examples](/docs/references/go/other-examples) or the library's [README file](https://github.com/clerk/clerk-sdk-go).
+For more usage details, check out the [examples](/docs/references/go/other-examples) or the library's [README file](https://github.com/clerk/clerk-sdk-go/tree/v2).
