add description about rendering the header

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -145,9 +145,7 @@ You can control which content signed in and signed out users can see with Clerk'
 - [`<SignInButton />`](/docs/components/unstyled/sign-in-button): An unstyled component that links to the sign-in page or displays the sign-in modal.
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-
-
-```tsx filename="app/layout.tsx" {13-21,23}
+```tsx filename="app/layout.tsx" {13-20}
 import { ClerkProvider, SignInButton, SignedIn, SignedOut, UserButton } from '@clerk/nextjs'
 import './globals.css';
 
@@ -202,10 +200,12 @@ export default MyApp;
 ```
 </CodeBlockTabs>
 
-### Create an inital page
+### Create a home page
+
+To render the header you just created, create a simple homepage.
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" 
+```tsx filename="app/page.tsx"
 
 export default function Home() {
   return (
@@ -214,7 +214,7 @@ export default function Home() {
 }
 ```
 
-```tsx filename="pages/index.tsx" 
+```tsx filename="pages/index.tsx"
 
 export default function Home() {
   return (
@@ -223,7 +223,6 @@ export default function Home() {
 }
 ```
 </CodeBlockTabs>
-
 
 Then, visit your app's homepage at [`localhost:3000`](http://localhost:3000) while signed out to see the sign-in button. Once signed in, your app will render the user button.
 
