--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -3,7 +3,7 @@ title: Requiring authentication for route protection | Next.js
 description: Learn how to protect the routes in your Next.js application that require authentication.
 ---
 
-# Requiring authenication for route protection
+# Requiring authentication for route protection
 
 Whether you're using the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [`auth()`](/docs/references/nextjs/authentication-object) object that you can use to access authentication details throughout your application. You can find details below on how to access and use the `auth()` object.
 
