--- a/docs/references/nextjs/route-protection-requiring-authorization.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authorization.mdx
@@ -80,7 +80,7 @@ export default function Page() {
 
 You can use protect queries and mutations in your Route Handlers or Server Actions in two ways:
 
-- `auth().protect()` if you want Clerk to redirect user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
+- `auth().protect()` if you want Clerk to redirect a user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
 - `auth().has()` if you want to customize the behavior or error message
 
 ```tsx filename="/app/api/dashboard/route.ts"
