Changes from PR suggestions

--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -112,7 +112,6 @@ export default function Page() {
       </div>
     );
   }
-  console.log('WTF?');
   return (
     <p>This is a protected page. You can see this because you are logged in.</p>
   );
@@ -158,7 +157,7 @@ export async function GET() {
 
   // Add your Route Handler logic here
 
-  return Response.json({ userId: auth().userId });
+  return Response.json({ userId });
 }
 ```
 </CodeBlockTabs>
@@ -167,7 +166,7 @@ export async function GET() {
 
 ### Protect a page
 
-You can protect a page using [`getServerSideProps()`](https://nextjs.org/docs/pages/building-your-application/data-fetching/get-server-side-props) when using Server Side Rendering, or with [`useAuth()`](/docs/references/react/use-auth) from the client side.
+You can protect a page using [`getServerSideProps()`](https://nextjs.org/docs/pages/building-your-application/data-fetching/get-server-side-props) when using Server Side Rendering, or with [`useUser()`](/docs/references/react/use-user) from the client side.
 
 <Tabs type="router" items={["Server Side Rendered", "Client side"]}>
 <Tab>
