update long term support page with version names

--- a/docs/upgrade-guides/long-term-support.mdx
+++ b/docs/upgrade-guides/long-term-support.mdx
@@ -17,9 +17,9 @@ After the LTS period ends, there will be no further changes to the code for that
 
 | Version | Status                        | As Of            | Until            |
 | ------- | ----------------------------- | ---------------- | ---------------- |
-| 5       | Active      | January 16, 2024 | TBD          |
-| 4       | Long term support | January 16, 2024 | Q1 2025          |
-| 3       | Unsupported                   | - | - |
+| Core 2       | Active      | January 16, 2024 | TBD          |
+| Core 1       | Long term support | January 16, 2024 | Q1 2025          |
+| Legacy (v3)       | Unsupported                   | - | - |
 
 ## Terminology
 
