update long term support page with version names

--- a/docs/upgrade-guides/long-term-support.mdx
+++ b/docs/upgrade-guides/long-term-support.mdx
@@ -23,10 +23,10 @@ After the LTS period ends, there will be no further changes to the code for that
 
 ## Terminology
 
-- **Critical Patch** - A critical patch addresses an issue that prevents an SDK from delivering intended user value under typical conditions. Other items, such as minor bug fixes and new features are not considered "critical patches".
+*   **Critical Patch** - A critical patch addresses an issue that prevents an SDK from delivering intended user value under typical conditions. Other items, such as minor bug fixes and new features are not considered "critical patches".
 
-- **Active** - Receives priority attention from the core maintainers of Clerk. New features to Clerk are only available in the Active version.
+*   **Active** - Receives priority attention from the core maintainers of Clerk. New features to Clerk are only available in the Active version.
 
-- **Long term support** - Receives critical patches, but does not receive new features.
+*   **Long term support** - Receives critical patches, but does not receive new features.
 
-- **Unsupported** - This version of Clerk no longer receives official support of any kind.
+*   **Unsupported** - This version of Clerk no longer receives official support of any kind.
