apply a couple more PR edits

--- a/docs/references/nextjs/clerk-middleware.mdx
+++ b/docs/references/nextjs/clerk-middleware.mdx
@@ -39,7 +39,10 @@ The `createRouteMatcher()` helper returns a function that, if called with the `r
 The [`protect()`](/docs/references/nextjs/auth#protect) method returned by `auth()` will redirect the user to the sign-in page if they are not authenticated.
 
 ```tsx filename="middleware.ts"
-import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
+import {
+  clerkMiddleware,
+  createRouteMatcher
+} from '@clerk/nextjs/server';
 
 const isProtectedRoute = createRouteMatcher([
   '/dashboard(.*)',
@@ -62,7 +65,10 @@ You can use more than one `createRouteMatcher()` in your application if you have
 The following example uses the `has()` method from Clerk's `auth()` helper. `has()` is a low level method that allows you to check if a user has a specific role or permission. For more information, see the [has() documentation](/docs/references/nextjs/authentication-object#has).
 
 ```tsx filename="middleware.ts"
-import { clerkMiddleware, createRouteMatcher } from '@clerk/nextjs/server';
+import {
+  clerkMiddleware,
+  createRouteMatcher
+} from '@clerk/nextjs/server';
 
 const isTenantRoute = createRouteMatcher([
   '/organization-selector',
