--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -5,7 +5,7 @@ description: Learn how to protect the routes in your Next.js application that re
 
 # Requiring authentication for route protection
 
-Whether you're using the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [`auth()`](/docs/references/nextjs/authentication-object) object that you can use to access authentication details throughout your application. You can find details below on how to access and use the `auth()` object.
+Whether you're using the App Router, Pages Router, or Middleware, there are several methods you can use to protect routes within your app that require a logged in user to access. This guide will go through a variety of examples of how to do this.
 
 If you want to learn about protecting routes based on [organization](/docs/organizations/overview) roles or permissions, see the [requiring authorization](/docs/references/nextjs/route-protection-requiring-authorization) guide.
 
