--- a/docs/references/nextjs/route-protection-requiring-authorization.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authorization.mdx
@@ -5,7 +5,7 @@ description: Learn how to protect the B2B (Business to Business) routes in your 
 
 # Required authorization for route protection
 
-Whether you're using the App Router, Pages Router, or Middleware, Clerk provides access to a standardized [`auth()`](/docs/references/nextjs/authentication-object) object that you can use to access authorization throughout your application. This allows you to protect routes based on Clerk's [organizations](/docs/organizations/overview) and their roles and permissions.
+Whether you're using the App Router, Pages Router, or Middleware, there are several methods you can use to protect routes within your app such that they require a user to have a certain role or permissions within an [organization](/docs/organizations/overview) to access. This guide will go through a variety of examples of how to do this.
 
 If you want to learn about protecting routes based on authentication, see the [requiring authentication](/docs/references/nextjs/route-protection-requiring-authentication) guide.
 
@@ -15,7 +15,7 @@ If you want to learn about protecting routes based on authentication, see the [r
 
 You can protect an entire route tree or an individual page by using Clerk helpers based on [permissions](/docs/organizations/verify-user-permissions) or [roles](/docs/organizations/verify-user-permissions#authorize-with-roles). There are two methods that you can use depending on your use case:
 
-- Using [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want Clerk to redirect user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
+- Using [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want Clerk to redirect a user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
 - Using [`auth().has()`](/docs/references/nextjs/authentication-object#has) if you want more control over what your app does based on the authorization status
 
 #### Protect a layout
@@ -80,7 +80,7 @@ export default function Page() {
 
 You can use protect queries and mutations in your Route Handlers or Server Actions in two ways:
 
-- `auth().protect()` if you want Clerk to redirect user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
+- `auth().protect()` if you want Clerk to redirect a user who isn't signed in to the sign-in route, or return a 404 if the user does not have the role or permission
 - `auth().has()` if you want to customize the behavior or error message
 
 ```tsx filename="/app/api/dashboard/route.ts"
