a couple more fixes

--- a/docs/references/nextjs/route-protection-requiring-authentication.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authentication.mdx
@@ -16,7 +16,7 @@ If you want to learn about protecting routes based on [organization](/docs/organ
 You can protect an entire route tree or an individual page by using Clerk helpers. There are two methods that you can use depending on your use case:
 
 - Using [`auth().protect()`](/docs/references/nextjs/auth#protect) if you want to redirect unauthenticated users to the sign in route automatically
-- Using `auth().userId` if you want more control over what your app does based on user authentication status
+- Using [`auth().userId`](/docs/references/nextjs/auth#retrieving-user-id) if you want more control over what your app does based on user authentication status
 
 #### Use `auth().protect()`
 
@@ -138,7 +138,7 @@ export async function GET() {
 
   // Add your Route Handler logic here
 
-  return Response.json({ userId: auth().userId })
+  return Response.json({ userId })
 }
 ```
 
