--- a/docs/references/nextjs/route-protection-requiring-authorization.mdx
+++ b/docs/references/nextjs/route-protection-requiring-authorization.mdx
@@ -96,7 +96,7 @@ export async function GET() {
 
   // Add your Route Handler logic here
 
-  return Response.json({ userId: auth().userId });
+  return Response.json({ userId });
 }
 ```
 
