--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -145,36 +145,81 @@ You can control which content signed in and signed out users can see with Clerk'
 - [`<SignInButton />`](/docs/components/unstyled/sign-in-button): An unstyled component that links to the sign-in page or displays the sign-in modal.
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.tsx" {1,6-11}
-import { SignedIn, SignedOut, SignInButton, UserButton } from "@clerk/nextjs";
+```tsx filename="app/layout.tsx" {13-20}
+import { ClerkProvider, SignInButton, SignedIn, SignedOut, UserButton } from '@clerk/nextjs'
+import './globals.css';
 
-export default function Home() {
+export default function RootLayout({
+  children,
+}: {
+  children: React.ReactNode
+}) {
   return (
-    <header>
-      <SignedOut>
-        <SignInButton />
-      </SignedOut>
-      <SignedIn>
-        <UserButton />
-      </SignedIn>
-    </header>
+    <ClerkProvider>
+      <html lang="en">
+        <body>
+          <header>
+            <SignedOut>
+              <SignInButton />
+            </SignedOut>
+            <SignedIn>
+              <UserButton />
+            </SignedIn>
+          </header>
+          <main>
+            {children}
+          </main>
+        </body>
+      </html>
+    </ClerkProvider>
   )
 }
 ```
-```tsx filename="pages/index.tsx" {1,6-11}
-import { SignedIn, SignedOut, SignInButton, UserButton } from "@clerk/nextjs";
+```tsx filename="pages/_app.tsx" {8-15}
+import '@/styles/globals.css'
+import { ClerkProvider, SignInButton, SignedIn, SignedOut, UserButton } from '@clerk/nextjs'
+import type { AppProps } from 'next/app'
 
-export default function Page() {
+function MyApp({ Component, pageProps }: AppProps) {
   return (
-    <header>
-      <SignedOut>
-        <SignInButton />
-      </SignedOut>
-      <SignedIn>
-        <UserButton />
-      </SignedIn>
-    </header>
-  );
+    <ClerkProvider {...pageProps}>
+      <header>
+        <SignedOut>
+          <SignInButton />
+        </SignedOut>
+        <SignedIn>
+          <UserButton />
+        </SignedIn>
+      </header>
+      <Component {...pageProps} />
+    </ClerkProvider>
+  )
+}
+
+export default MyApp;
+```
+</CodeBlockTabs>
+
+### Create a home page
+
+To render the header you just created, create a simple homepage.
+
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
+```tsx filename="app/page.tsx"
+
+export default function Home() {
+  return (
+    <h1>Home Page</h1>
+  )
+}
+```
+
+```tsx filename="pages/index.tsx"
+
+export default function Home() {
+  return (
+    <h1>Home Page</h1>
+  )
 }
 ```
 </CodeBlockTabs>
