--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -1,183 +1,294 @@
 ---
-title: Use Clerk with JavaScript
-description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
+title: JavaScript Quickstart
+description: Add authentication and user management to your JavaScript app with Clerk.
 ---
 
-# Use Clerk with JavaScript
+<TutorialHero
+  framework="javascript"
+  exampleRepo={[
+    {
+      title: "JavaScript Quickstart Repo",
+      link: "https://github.com/clerk/clerk-javascript-quickstart"
 
-Learn how to use Clerk to quickly and easily add secure authentication and user management to your JavaScript application.
+    }
+  ]}
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk",
+    },
+  ]}
+>
 
-<Steps>
+- Add the ClerkJS SDK to your JavaScript application
+- Use Clerk components to allow users to sign in or out
 
-### Install `@clerk/clerk-js` or use `<script>` tag
+</TutorialHero>
 
-To use the ClerkJS package, you have two options:
+To add the [ClerkJS SDK](/docs/references/javascript/overview) to your JavaScript application, you have two options:
 
-1. Install the package using a package manager, like npm, yarn, or pnpm.
+1. Install the package using a package manager, like `npm`, `yarn`, or `pnpm`.
 2. Use the `<script>` tag to load the ClerkJS package from our CDN.
 
-#### Option 1: Install ClerkJS using a package manager
+Select your preferred method below to get started.
 
-At the root of your project, install the ClerkJS package using your package manager of choice:
+<Tabs items={["NPM module", "<script>"]}>
+  {/* NPM module tab */}
+  <Tab>
+    <Steps>
+      ### Set up a JavaScript application using Vite
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
-  ```bash filename="terminal"
-  npm install @clerk/clerk-js
-  ```
+      To install the ClerkJS SDK, you will need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
 
-  ```bash filename="terminal"
-  yarn add @clerk/clerk-js
-  ```
+      For the sake of this guide, scaffold your new JavaScript application using [Vite](https://vitejs.dev/guide/#scaffolding-your-first-vite-project). From the prompts, choose the **Vanilla** framework, and then choose the **JavaScript** variant.
 
-  ```bash filename="terminal"
-  pnpm add @clerk/clerk-js
-  ```
-</CodeBlockTabs>
+      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+        ```bash filename="terminal"
+        npm create vite@latest clerk-javascript
+        cd clerk-javascript
+        npm install
+        npm run dev
+        ```
 
-> You'll need to use a bundler like [Vite](https://vitejs.dev/) or [Webpack](https://webpack.js.org/) to use this method.
+        ```bash filename="terminal"
+        yarn create vite clerk-javascript
+        cd clerk-javascript
+        yarn install
+        yarn dev
+        ```
 
-#### Option 2: Use the `<script>` tag
+        ```bash filename="terminal"
+        pnpm create vite clerk-javascript
+        cd clerk-javascript
+        pnpm install
+        pnpm dev
+        ```
+      </CodeBlockTabs>
 
-```html
-<script>
-  // Get this URL from the Clerk Dashboard
-  const frontendApi = '[your-domain].clerk.accounts.dev';
-  const version = '@latest'; // Set to appropriate version
+      ### Install `@clerk/clerk-js`
 
-  // Creates asynchronous script
-  const script = document.createElement('script');
-  script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
-  document.body.appendChild(script);
-</script>
-```
+      At the root of your project, install the ClerkJS package using your package manager of choice:
 
-### Set environment keys
+      <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+        ```bash filename="terminal"
+        npm install @clerk/clerk-js
+        ```
 
-To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. Otherwise, you can find these values in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
+        ```bash filename="terminal"
+        yarn add @clerk/clerk-js
+        ```
 
-<InjectKeys>
+        ```bash filename="terminal"
+        pnpm add @clerk/clerk-js
+        ```
+      </CodeBlockTabs>
 
-```sh filename=".env.local"
-REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
-CLERK_FRONTEND_API=[your-domain].clerk.accounts.dev
-```
+      ### Set environment variables
 
-</InjectKeys>
+      It's recommended to use environment variables to store your Clerk **Publishable Key**. A common way to use environment variables in a JavaScript project is by putting the values in a `.env` file and then loading them into your application using a package like [`dotenv`](https://www.npmjs.com/package/dotenv). However, when using Vite, environment variables stored in a `.env` file at the project root are automatically exposed through the [`import.meta.env` object](https://vitejs.dev/guide/env-and-mode.html#env-variables).
 
-> We suggest storing these keys in environment variables using a `.env` file or equivalent.
+      1. Create a `.env` file at the root of your project, and add your Clerk **Publishable Key**. If you're signed into Clerk, the `.env` snippet below will contain your key. Otherwise, you can copy it from the Clerk Dashboard by navigating to the [**API Keys**](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
-### Setup the Clerk class
+        <InjectKeys>
+          ```env filename=".env"
+          VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
+          ```
+        </InjectKeys>
 
-To use the ClerkJS package, you'll need to initialize the Clerk class with your **Publishable key**.
+      2. In your `main.js` file, import the publishable key using Vite's `import.meta.env` object.
 
-<Callout type="info">
-  Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
-</Callout>
+      ```js filename="main.js"
+      const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
+      ```
 
-<InjectKeys>
+      ### Initialize ClerkJS
 
-<CodeBlockTabs options={['npm Package', 'script Tag']}>
-```js filename="index.js"
-import Clerk from '@clerk/clerk-js';
+      To initialize the ClerkJS SDK, import the `Clerk` class and instantiate it with your **Publishable Key**. Then, call the `load()` method to initialize ClerkJS.
 
-const clerkPublishableKey = `{{pub_key}}`;
-const clerk = new Clerk(clerkPublishableKey);
-await clerk.load({
-  // Set load options here...
-});
-```
+      ```js filename="main.js"
+      import Clerk from "@clerk/clerk-js";
 
-```html filename="index.html"
-<script>
-  const clerkPublishableKey = `{{pub_key}}`;
-  const frontendApi = '[your-domain].clerk.accounts.dev';
-  const version = '@latest';
-  const script = document.createElement('script');
-  script.setAttribute('data-clerk-frontend-api', frontendApi);
-  script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
-  script.async = true;
-  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+      const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
 
-  // Adds listener to initialize ClerkJS after it's loaded
-  script.addEventListener('load', async function () {
-    const clerk = window.Clerk;
-    await clerk.load({
-      // Set load options here...
-    });
-  });
-  document.body.appendChild(script);
-</script>
-```
-</CodeBlockTabs>
+      const clerk = new Clerk(clerkPubKey);
+      await clerk.load({
+        // Set load options here
+      });
+      ```
 
-</InjectKeys>
+      <Callout type="info">
+        Calling the `load()` method initializes ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+      </Callout>
 
-> You can configure the options for `Clerk.load` to change the behavior of ClerkJS. See the [ClerkJS reference documentation](/docs/references/javascript/clerk/clerk#load) for more information.
+      ### Allow users to sign in and out
 
-### Render a UI component
+      Clerk's [prebuilt components](/docs/components/overview) are the easiest way to add authentication and user management to your application. They come styled out of the box and are customizable to fit your application's design.
 
-Now that you have the Clerk class set up, you can use it to render a UI component into a DOM element.
+      To get started, you will use:
 
-This example uses [the `<UserButton />` component](/docs/references/javascript/clerk/user-button), which will allow the user to sign in and out of our application.
+      - [`<SignIn />`](/docs/references/javascript/clerk/sign-in): renders a user interface for signing in.
+      - [`<UserButton />`](/docs/references/javascript/clerk/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
 
-<Images width={496} height={564} src="/docs/images/ui-components/component-user_button.svg" alt="User Button Example" />
+      <Tabs items={["index.js", "index.html"]}>
+        <Tab>
+          ```js filename="main.js"
+          import Clerk from "@clerk/clerk-js";
 
-<InjectKeys>
+          const clerkPubKey = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY;
 
-<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
-  ```typescript {14}
-  import Clerk from '@clerk/clerk-js';
+          const clerk = new Clerk(clerkPubKey);
+          await clerk.load();
 
-  document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
-    <div
-      id="user-button"
-    ></div>
-  `;
+          if (clerk.user) {
+            document.getElementById("app").innerHTML = `
+              <div id="user-button"></div>
+            `;
 
-  const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
+            const userButtonDiv =
+              document.getElementById("user-button");
 
-  const clerk = new Clerk(`{{pub_key}}`);
-  await clerk.load();
+            clerk.mountUserButton(userButtonDiv);
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
 
-  clerk.mountUserButton(userButtonComponent);
-  ```
+            const signInDiv =
+              document.getElementById("sign-in");
 
-  ```html {13}
-  <div id="user-button"></div>
-  <script>
-    const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
-    script.async = true;
-    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+            clerk.mountSignIn(signInDiv);
+          }
+          ```
+          </Tab>
 
-    script.addEventListener('load', async function () {
-      await window.Clerk.load();
+          <Tab>
+          ```html filename="index.html"
+          <!doctype html>
+          <html lang="en">
+            <head>
+              <meta charset="UTF-8" />
+              <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+              <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+              <title>Vite App</title>
+            </head>
+            <body>
+              <div id="app"></div>
+              <script type="module" src="/main.js"></script>
+            </body>
+          </html>
+          ```
+          </Tab>
 
-      const userButtonComponent = document.querySelector('#user-button');
+        </Tabs>
+    </Steps>
+  </Tab>
 
-      window.Clerk.mountUserButton(userButtonComponent);
-    });
-    document.body.appendChild(script);
-  </script>
-  ```
-</CodeBlockTabs>
+  {/* <script> tag tab */}
+  <Tab>
+    <Steps>
+      ### Add the ClerkJS package using a `<script>` tag
 
-</InjectKeys>
+      This `<script>` tag will load the ClerkJS package from our CDN and initialize it with your Clerk **Publishable Key** and **Frontend API URL**. It should be placed before any other `<script>` tags that use ClerkJS.
 
-</Steps>
+      1. Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
+      2. Select your application, then select **🔑 API Keys** in the sidebar menu.
+      3. In the **Quick Copy** section, select **JavaScript** from the dropdown menu.
+      4. Copy the `<script>` tag and paste it into your HTML file.
 
+      It should look something like this:
 
-### Next steps
+      <InjectKeys>
 
-Now that you have an application integrated with Clerk, you will want to read the following documentation:
+      ```html filename="index.html"
+        <script
+          async
+          crossorigin="anonymous"
+          data-clerk-publishable-key={{pub_key}}
+          src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+          type="text/javascript"
+        ></script>
+      ```
+
+      </InjectKeys>
+
+      In the `<script>` tag, the `onload` attribute is used to call the `load()` method when the ClerkJS package is loaded. This is necessary to initialize ClerkJS. For more information on the `load()` method and what options you can pass to it, check out the [reference documentation](/docs/references/javascript/clerk/clerk#load).
+
+      ### Listen for the `load` event
+
+      After the ClerkJS package is loaded, you can listen for the `load` event to ensure that ClerkJS is ready to use.
+
+      Below the `<script>` tag that initializes ClerkJS, add another `<script>` tag to listen for the `load` event:
+
+      ```html filename="index.html"
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          console.log("ClerkJS is loaded");
+        });
+      </script>
+      ```
+
+      ### Allow users to sign in or out
+
+      Clerk's [prebuilt components](/docs/components/overview) are the easiest way to add authentication and user management to your application. They come styled out of the box and are customizable to fit your application's design.
+
+      To get started, you will use:
+
+      - [`<SignIn />`](/docs/references/javascript/clerk/sign-in): renders a user interface for signing in.
+      - [`<UserButton />`](/docs/references/javascript/clerk/user-button): shows the avatar from the account the user is signed in with. When clicked, it opens a dropdown menu with options to sign out.
+
+      <InjectKeys>
+
+      ```html filename="index.html"
+      <div id="app"></div>
+
+      <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key={{pub_key}}
+        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+        type="text/javascript"
+      ></script>
+
+      <script>
+        window.addEventListener("load", async function () {
+          await Clerk.load();
+
+          if (Clerk.user) {
+            document.getElementById("app").innerHTML = `
+              <div id="user-button"></div>
+            `;
+
+            const userButtonDiv = document.getElementById("user-button");
+
+            Clerk.mountUserButton(userButtonDiv);
+          } else {
+            document.getElementById("app").innerHTML = `
+              <div id="sign-in"></div>
+            `;
+
+            const signInDiv = document.getElementById("sign-in");
+
+            Clerk.mountSignIn(signInDiv);
+          }
+        });
+      </script>
+      ```
+
+      </InjectKeys>
+    </Steps>
+  </Tab>
+</Tabs>
+
+### More resouces
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+    <Cards title="Clerk Class Reference" description="Learn more about the Clerk class and how to use it." link="/docs/references/javascript/clerk/clerk" cta="Learn More" />
 
     <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/references/javascript/clerk/clerk#components" cta="Learn More" />
 
-    <Cards title="Clerk Class Reference" description="Learn more about the Clerk class and how to use it." link="/docs/references/javascript/clerk/clerk" cta="Learn More" />
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
   </div>
 </div>
