--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -12,7 +12,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 </Callout>
 
 <Callout type='info' emoji='💡'>
-  The next major version of the Clerk Expo SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/expo) instead.
+  The next major version of the Clerk Expo SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/expo) instead.
 </Callout>
 
 <Steps>
