--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -14,7 +14,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
 </Callout>
 
 <Callout type='info' emoji='💡'>
-  The next major version of the Clerk Fastify SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/fastify) instead.
+  The next major version of the Clerk Fastify SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/fastify) instead.
 </Callout>
 
 <Steps>
