--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -26,7 +26,7 @@ description: Add authentication and user management to your JavaScript app with 
 </TutorialHero>
 
 <Callout type='info' emoji='💡'>
-  The next major version of the Clerk Javascript SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/javascript) instead.
+  The next major version of the Clerk Javascript SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/javascript) instead.
 </Callout>
 
 To add the [ClerkJS SDK](/docs/references/javascript/overview) to your JavaScript application, you have two options:
