--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -30,7 +30,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 </TutorialHero>
 
 <Callout type='info' emoji='💡'>
-  The next major version of the Clerk React SDK is coming soon! If you're just starting a project, consider [trying out the core 2 beta](https://beta.clerk.com/docs/quickstarts/react) instead.
+  The next major version of the Clerk React SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/react) instead.
 </Callout>
 
 <Steps>
