Add note to quickstart guides about the new beta (#737)

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -7,6 +7,10 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application. This guide assumes that you are using Remix v2 or later.
 
+<Callout type='info' emoji='💡'>
+  The next major version of the Clerk Remix SDK is coming soon! If you're just starting a project, consider [trying out the Core 2 beta](https://beta.clerk.com/docs/quickstarts/remix) instead.
+</Callout>
+
 <Steps>
 
 ### Install `@clerk/remix`
