Apply suggestions from code review
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -13,7 +13,7 @@ A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middlewar
 
 ## Return type of `auth()`
 
-`auth()` returns the [`Authentication`](/docs/references/nextjs/auth-object) object with a few extra properties:
+`auth()` returns the [`Auth`](/docs/references/nextjs/auth-object) object with a few extra properties:
 
 - [`protect()`](#protect)
 - [`redirectToSignIn()`](#redirect-to-sign-in)
@@ -108,7 +108,7 @@ export default async function Layout({ children }:{ children: React.ReactNode })
 
 ## Use `auth()` to check if a user is authorized
 
-`auth()` returns the [`Authentication`](/docs/references/nextjs/auth-object#auth-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
+`auth()` returns the [`Auth`](/docs/references/nextjs/auth-object#auth-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
 
 `has()` and `protect()` can be used to check if a user is authorized to access certain parts of your application.
 
